Fix T65641: Move to collection - arrow keys work in the opposite direction

Patch my Germano Cavalcante (mano-wii).